# mark

./: README.md  pyproject.toml
mark/: cli.py  core.py
