[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mark-toolkit"
version = "0.1.0"
description = "Markdown toolkit — TOC, lint, check links, format, stats"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
mark = "mark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mark*"]
